# ShopShot

./: .dockerignore  .env.example  .gitignore  DEMO_DOC.md  Dockerfile  README.md  auto_enter.py  docker-compose.yml  docker-start.bat  docker-start.sh  docker.yaml  fix_plan_and_pitfalls.md  run_e2e_test.bat  start.bat  start.py  start_backend.bat  start_frontend.bat  test_e2e.bat
projects/ad_video_gen/backend/: .gitignore  pyproject.toml
projects/ad_video_gen/backend/app/: main.py
projects/ad_video_gen/backend/app/director-agent/: config.yaml.example
projects/ad_video_gen/backend/app/director-agent/src/: README.md  agent.py  requirements.txt
projects/ad_video_gen/backend/app/director-agent/src/director_agent/: agent.py  prompt.py
projects/ad_video_gen/backend/app/evaluate-agent/: config.yaml.example
projects/ad_video_gen/backend/app/evaluate-agent/src/: README.md  agent.py  requirements.txt
projects/ad_video_gen/backend/app/market-agent/: config.yaml.example
projects/ad_video_gen/backend/app/market-agent/src/: README.md  agent.py  app.py  requirements.txt
projects/ad_video_gen/backend/app/market-agent/src/market_agent/: agent.py  (+2 more)
projects/ad_video_gen/backend/app/multimedia-agent/: config.yaml.example
projects/ad_video_gen/backend/app/multimedia-agent/src/: agentkit.py  requirements.txt  server.py
projects/ad_video_gen/backend/app/release-agent/: config.yaml.example
projects/ad_video_gen/backend/app/release-agent/src/: README.md  agent.py  app.py  requirements.txt
projects/ad_video_gen/backend/app/short_link/: README.md  app.py  requirements.txt
(+195 files in other folders)
