[project]
name = "veadk-multimedia-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk==1.18.0",
    "veadk-python==0.2.28",
    "json-repair>=0.54.1",
    "aiohttp",
    "uvicorn>=0.38.0",
    "moviepy[ffmpeg]>=2.2.1",
    "playwright>=1.57.0",
    "requests>=2.32.5",
]
